--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -265,46 +265,45 @@
                 </StackPanel>
             </Border>
         </Viewbox>
-
-        <Viewbox Name="Vbx_Ciudadano" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
+        <Viewbox x:Name="Vbx_Ciudadano" Grid.Column="1" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
 
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
                     <Label Content="Nº Placa" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtNumeroPlacaCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
+                    <TextBox x:Name="txtNumeroPlacaCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
 
                     <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtDNICiu" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtDNICiu" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtNombreCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtNombreCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtPrimerApellCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtPrimerApellCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtSegunApellCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtSegunApellCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
-                    <ComboBox Name="cmbxGeneroCiu" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
+                    <ComboBox x:Name="cmbxGeneroCiu" Margin="5" Width="180" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" IsEditable="False">
                         <ComboBoxItem Content="M" />
                         <ComboBoxItem Content="F" />
                     </ComboBox>
 
                     <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtCorreoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtCorreoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtTelefonoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtTelefonoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
-                    <DatePicker Name="datpick_FechaNacimientoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
+                    <DatePicker x:Name="datpick_FechaNacimientoCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Name="txtDireccionCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtDireccionCiu" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Estado Judicial" Foreground="White"  HorizontalAlignment="Center"/>
-                    <ComboBox Name="cmbx_EstadoJudicial" Width="180" Visibility="Visible" IsReadOnly="True"  ></ComboBox>
+                    <ComboBox x:Name="cmbx_EstadoJudicial" Width="180" Visibility="Visible" IsReadOnly="True"  />
 
                 </StackPanel>
             </Border>
@@ -423,15 +422,64 @@
                     <TextBox Name="txtbx_NumPlaca" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Separator Opacity="0"></Separator>
                     <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="FiltrarPorPlaca" />
-                    <Button Content="🔄 Restaurar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
-                    <Button Content="✏️ Modificar" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
+                    <Button Content="🔄 Restaurar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Restablecer"/>
+                    <Button Content="✏️ Modificar" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Modificar"/>
                     <Button Name="btn_MasDetalles" Content="ℹ️ Mas Detalles" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Button Content="⏪ Volver" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" FontSize="16" Cursor="Hand" Click="Btn_Volver" BorderBrush="#BDBDBD" BorderThickness="1"/>
                 </StackPanel>
             </Border>
         </Viewbox>
 
+        
+        <Viewbox Name="Vbx_FormularioDenuncia" Grid.Column="0" HorizontalAlignment="Center" Grid.Row="1" MaxHeight="700" Visibility="Hidden">
 
+            <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
+                <StackPanel Width="220">
+                    
+                    <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Contraseña" Foreground="White"  HorizontalAlignment="Center"/>
+                    <PasswordBox  Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
+                 
+
+                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
+                    <DatePicker  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
+                    <Label Content="Turno" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush= "#BDBDBD" BorderThickness="1" IsReadOnly="True"/>
+                    <ComboBox Width="180" IsReadOnly="True" Visibility="Visible" SelectionChanged="SeleccionTurno" >
+                        <ComboBoxItem Content="Mañana" />
+                        <ComboBoxItem Content="Tarde" />
+                        <ComboBoxItem Content="Noche" />
+                    </ComboBox>
+
+                    <Label Content="Rango" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox Margin="5" Width="180" IsReadOnly="True"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged="SeleccionRango" />
+
+                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox  Margin="5" Width="180" IsReadOnly="True" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <ComboBox  Width="180" Visibility="Visible" IsReadOnly="True" SelectionChanged ="SeleccionDistrito"></ComboBox>
+                </StackPanel>
+            </Border>
+        </Viewbox>
     </Grid>
 
 </Window>
