--- a/Policheck/Views/MainWindow.xaml
+++ b/Policheck/Views/MainWindow.xaml
@@ -419,9 +419,9 @@
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" Margin="10"
             BorderBrush="White"  BorderThickness="1">
                 <StackPanel Width="160"  Background="#1E1E1E" >
-                    <TextBox Name="txtbx_NumPlaca" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
+                    <TextBox Name="txtbx_buscar" Height="30"  Padding="5" Background="White" Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1" />
                     <Separator Opacity="0"></Separator>
-                    <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="FiltrarPorPlaca" />
+                    <Button Content="🔍 Buscar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="FiltrarPorDni" />
                     <Button Content="🔄 Restaurar" Height="50" Margin="5" Background="#1976D2" Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Restablecer"/>
                     <Button Content="✏️ Modificar" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" Click="Btn_Modificar"/>
                     <Button Name="btn_MasDetalles" Content="ℹ️ Mas Detalles" Height="50" Margin="5" Background="#007ACC"  Foreground="White" FontWeight="Bold" BorderBrush="#BDBDBD" BorderThickness="1" />
@@ -436,29 +436,26 @@
             <Border Background="#AA1E1E1E" CornerRadius="15" Padding="15" BorderBrush="White" BorderThickness="1" Width="250" >
                 <StackPanel Width="220">
                     
+                    <Label Content="Direccion" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtdireccionDen" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="CP" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtCcodigoPostalDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Distrito" Foreground="White"  HorizontalAlignment="Center"/>
+                    <PasswordBox x:Name="txtDistritoDen" Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="titulo" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txttituloDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
+                    <Label Content="Descipcion" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtdescripcionDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    
+                    <Label Content="Categoria" Foreground="White"  HorizontalAlignment="Center"/>
+                    <TextBox x:Name="txtcategoriaDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+
                     <Label Content="DNI" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Nombre" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Contraseña" Foreground="White"  HorizontalAlignment="Center"/>
-                    <PasswordBox  Margin="5" Width="180"   Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="1ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="2ºApellido" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Género" Foreground="White"  HorizontalAlignment="Center"/>
-                 
-
-                    <Label Content="Correo" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
-
-                    <Label Content="Teléfono" Foreground="White"  HorizontalAlignment="Center"/>
-                    <TextBox Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
+                    <TextBox x:Name="txtdniDen" Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"/>
 
                     <Label Content="Fecha Nacimiento" Foreground="White"  HorizontalAlignment="Center"/>
                     <DatePicker  Margin="5" Width="180"  Foreground="Black" BorderBrush="#BDBDBD" BorderThickness="1"></DatePicker>
